--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,36 @@
 server.servlet.context-path=/
 logging.level.org.springframework=debug
+#spring.security.user.username=rkarka
+#spring.security.user.password=rkarka
+
+spring.h2.console.enabled=true
+
+spring.jpa.hibernate.connection.provider_class=org.hibernate.hikaricp.internal.HikariCPConnectionProvider
+spring.jpa.hibernate.hikari.minimumIdle=5
+spring.jpa.hibernate.hikari.maximumPoolSize=10
+spring.jpa.hibernate.hikari.idleTimeout=30000
+
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maxLifetime=1800000
+
+spring.datasource.url = jdbc:h2:tcp://localhost:8082/~/test;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+spring.datasource.initialize=true
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE;;FILE_LOCK=SOCKET
+#spring.datasource.schema=classpath:autogenkey-schema.sql
+#spring.datasource.testWhileIdle = true
+#spring.datasource.validationQuery = SELECT 1
+
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
