adding appointmnet calender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.servlet.context-path=/
-logging.level.org.springframework=debug
+logging.level.org.springframework=info
 #spring.security.user.username=rkarka
 #spring.security.user.password=rkarka
 
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2console/
 
 spring.jpa.hibernate.connection.provider_class=org.hibernate.hikaricp.internal.HikariCPConnectionProvider
 spring.jpa.hibernate.hikari.minimumIdle=5
@@ -14,12 +15,17 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
 
+
+
 spring.datasource.url = jdbc:h2:tcp://localhost:8082/~/test;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+management.endpoints.enabled-by-default=true
+management.endpoint.info.enabled=true
 
 spring.datasource.initialize=true
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
